--- a/formulário.html
+++ b/formulário.html
@@ -11,7 +11,7 @@
   <body>
     <div>
       <h1 id="titulo">Cadastro de DEV</h1>
-      <p id="subtitulo">Informações pessoais</p>
+      <p id="subtitulo"><strong>Informações pessoais</strong> </p>
       <br />
     </div>
 
